feat: offer the schedule as a grid or a list, drop the picture
the picture button becomes a list button. both views are now html files
and the reader picks: a grid shows how long things take and what overlaps,
a list has no axis to run out of. which one helps depends on the day, and
arguing about it does not pay.

the axis now labels its closing hour. labels mark the start of an hour, so
the default axis ended at "19" while the row ran to 20:00, and the day
read as cut off at seven in the evening. reported from a phone; no task
was ever lost, the range query uses coalesce(starts_at, due_at).

CalendarRenderer, Fonts, TextFit, the bundled font and sendPhoto are gone
with their tests. Lanes stays - the html grid packs overlaps with it.
bringing the picture back is a git revert.